# poly-rpc-prototype

./: Cargo.toml  README.md  build.rs
app/: Cargo.toml
app/src/: client.rs  main.rs  server.rs
consensus/: Cargo.toml
consensus/core/: Cargo.toml
consensus/core/src/: lib.rs  stubs.rs  subnets.rs
consensus/src/: channel.rs  lib.rs  notifiy.rs
core/src/: lib.rs
hashes/: Cargo.toml
hashes/src/: lib.rs
proto/: kaspadrpc.proto  messages.proto  rpc.proto
rpc/core/: Cargo.toml
rpc/core/src/: errors.rs  lib.rs  other.rs  result.rs  stubs.rs
rpc/core/src/api/: client.rs  mod.rs  notifications.rs  ops.rs  p2p.rs  rpc.rs
rpc/core/src/convert/: block.rs  header.rs  mod.rs  notification.rs
rpc/core/src/model/: block.rs  blue_work.rs  hash.rs  header.rs  hex_data.rs  message.rs  mod.rs  script_class.rs  subnets.rs  tx.rs
rpc/core/src/notify/: channel.rs  collector.rs  collector_from.rs  errors.rs  events.rs  listener.rs  message.rs  mod.rs  notifier.rs  subscriber.rs  utxo_address_map.rs
rpc/core/src/rpc_client/server/: service.rs
rpc/core/src/server/: collector.rs  mod.rs  service.rs
rpc/core/src/utils/: mod.rs  triggers.rs
rpc/grpc/: Cargo.toml  build.rs
rpc/grpc/proto/: messages.proto  rpc.proto
rpc/grpc/src/: lib.rs  triggers.rs
rpc/grpc/src/client/: errors.rs  mod.rs
rpc/grpc/src/client/resolver/: mod.rs
rpc/grpc/src/cnv/: mod.rs  rpc_block.rs  rpc_header.rs
rpc/grpc/src/convert/: block.rs  error.rs  header.rs  kaspad.rs  message.rs  mod.rs  notification.rs  tx.rs
rpc/grpc/src/ext/: kaspad.rs  mod.rs
rpc/grpc/src/rpc_client/: mod.rs  server.rs  service.rs
rpc/grpc/src/rpc_client/client/: errors.rs  mod.rs
rpc/grpc/src/rpc_client/client/resolver/: matcher.rs  mod.rs
rpc/grpc/src/rpc_client/server/: mod.rs  service.rs
rpc/grpc/src/server/: collector.rs  connection.rs  mod.rs  service.rs
rpc/models/: Cargo.toml
rpc/models/src/: lib.rs  rpc_block.rs  rpc_hash.rs  rpc_header.rs  rpc_tx.rs
src/: client.rs  lib.rs  server.rs
utils/: Cargo.toml
utils/src/: lib.rs
