[workspace]
members = [
    "app",
    "hashes",
    "rpc/core",
    "rpc/grpc",
    "consensus",
    "consensus/core",
]

[workspace.package]
version = "0.1.0"
authors = ["Tiram"]
license = "MIT/Apache-2.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]

[workspace.dependencies]
app = { path = "app" }
hashes = { path = "hashes" }
rpc-core = { path = "rpc/core" }
rpc-grpc = { path = "rpc/grpc" }
consensus = { path = "consensus" }
consensus-core = { path = "consensus/core" }
kaspa-utils = { path = "utils" }

rand = "0.8"
faster-hex = "0.6"
serde = { version = "1", features = ["derive", "rc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
bincode = { version = "1", default-features = false }
tokio = { version = "1", features = ["sync"] }
criterion = { version = "0.4", default-features = false }
tonic = { version = "0.8", features = ["gzip"] }
prost = { version = "0.11" }
derive_more = { version = "0.99" }
thiserror = "1"
borsh = "0.9.3"
triggered = "0.1"
