[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[[bin]]
name="app"
path="./src/main.rs"

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
hashes.workspace = true
rpc-grpc.workspace = true
rpc-core.workspace = true
consensus-core.workspace = true
tonic.workspace = true
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde.workspace = true
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = "0.1"
async-stream = "0.2"
serde_json = "1.0"
rand.workspace = true
clap = { version = "4.0", features = ["color", "derive"]}
