[package]
name = "rpc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus-core.workspace = true
hashes.workspace = true
kaspa-utils.workspace = true
faster-hex.workspace = true
serde.workspace = true
derive_more.workspace = true
thiserror.workspace = true
borsh.workspace = true
triggered.workspace = true
async-trait = "0.1.57"
async-std = { version = "1.12.0", features = ['attributes'] }
ahash = "0.8.0"
futures = { version = "0.3" }
rand = "0.8"
workflow-core = "0.1.0"
