[package]
name = "rpc-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-core.workspace = true
tonic.workspace = true
prost.workspace = true
faster-hex.workspace = true
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"
async-trait = "0.1.57"

[build-dependencies]
tonic-build = { version = "0.8" }
