[package]
name = "rpc-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
rpc-core.workspace = true
tonic.workspace = true
kaspa-utils.workspace = true
prost.workspace = true
faster-hex.workspace = true
triggered.workspace = true
futures = { version = "0.3" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-std = { version = "1.12.0", features = ['attributes'] }
# async-stream = "0.2"
async-trait = "0.1.57"
h2 = "0.3"

[build-dependencies]
tonic-build = { version = "0.8" }
