[package]
name = "rpc-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashes.workspace = true
faster-hex.workspace = true
async-trait = "0.1.57"
serde.workspace = true
borsh = "0.9.3"
async-std = { version = "1.12.0", features = ['attributes'] }
thiserror = "1.0.32"